--- a/package.json
+++ b/package.json
@@ -1,24 +1,13 @@
 {
-  "name": "3xf-security-site",
+  "name": "vite-react-typescript-starter",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
-  },
   "scripts": {
-    "dev": "vite --host 127.0.0.1",
-    "build": "npm run security-check && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext ts,tsx --fix",
-    "preview": "vite preview --host 127.0.0.1",
-    "type-check": "tsc --noEmit",
-    "security-check": "npm audit --audit-level moderate",
-    "security-audit": "npm audit fix",
-    "prepare": "npm run security-check && npm run lint && npm run type-check",
-    "clean": "rm -rf dist node_modules/.vite",
-    "analyze": "npx vite-bundle-analyzer"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -34,35 +23,11 @@
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
-    "eslint-plugin-security": "^3.0.1",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2",
-    "vite-bundle-analyzer": "^0.10.1"
-  },
-  "resolutions": {
-    "glob-parent": ">=5.1.2",
-    "minimist": ">=1.2.6",
-    "nth-check": ">=2.0.1"
-  },
-  "overrides": {
-    "glob-parent": ">=5.1.2",
-    "minimist": ">=1.2.6",
-    "nth-check": ">=2.0.1"
-  },
-  "config": {
-    "audit-ci": {
-      "moderate": true,
-      "allowlist": []
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+    "vite": "^5.4.2"
+  }
 }
